--- a/styles/style.css
+++ b/styles/style.css
@@ -114,3 +114,168 @@
     font-size: 2.1rem;
     font-weight: 700;
 }
+/* Feature sectioin */
+.features {
+    display: flex;
+    margin-top: 64px;
+}
+.feature-left {
+    padding-right: 8rem;
+
+}
+.feature-left h2 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #131313;
+    border-left: 4px solid #FF900E;
+    padding-left: 6px;
+    margin-bottom: 1rem;
+
+}
+.feature-left p {
+    line-height: 26px;
+    font-size: 14px;
+    color: #727272;
+    margin-bottom: 1rem;
+}
+.feature-card {
+    font-size: 20px;
+    font-weight: 600;
+    color: #131313;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.06);
+    padding-left: 1rem;
+    padding: 14px;
+    border-radius: 8px;
+}
+.feature-card h4 {
+
+}
+.feature-card p {
+    font-size: 14px;
+    color: #727272;
+    line-height: 26px;
+    font-weight: 400;
+}
+.feature-right {
+    
+}
+.feature-right img {
+    width: 100%;
+    min-height: 550px;
+    margin-top: 10px;
+}
+.btn-container {
+    background-color: #FF900E;
+    color: white;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    padding: 28px 42px;
+    margin-left: -90px;
+    margin-top: -80px;
+    font-size: 42px;
+    font-weight: 700;
+    border-radius: 6px;
+}
+#btn-exprience {
+    font-weight: 500;
+    font-size: 16px;
+    
+}
+
+/* Facts Area */
+#facts {
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
+}
+.facts-top h3 {
+    color: #131313;
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.facts-top p {
+    color: #727272;
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    line-height: 26px;
+    padding-right: 2rem;
+}
+.facts-bottom {
+    display: flex;
+    justify-content: space-between;
+}
+.facts-bottom .cards {
+    border: 1px solid #FF900E;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    padding: 1.7rem 1.5rem;
+    border-radius: 5px;
+    max-width: 240px;
+}
+.cards img {
+    margin-bottom: 10px;
+}
+.cards h3 {
+    margin-bottom: 10px;
+}
+/* Hide */
+.hide {
+    display: none;
+}
+
+/* Responsive  */
+@media screen and (max-width: 576px){
+    .display-flex {
+        flex-direction: column;
+    }
+    .brand h2 {
+        font-size: 2.1rem;
+        margin-bottom: 1rem;
+    }
+    .nav-container {
+    align-items: center;
+    margin-bottom: 1rem;
+    padding: 24px 0;
+}
+    .menu {
+        font-size: 1.5rem;
+        
+    }
+    .banner-top h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    color: #131313;
+    margin-bottom: 24px;
+
+}
+.banner-top h1 {
+    font-size: 3rem;
+}
+.banner-top p {
+    font-size: 1.2rem;
+}
+.gallery-container {
+    flex-direction: column;
+}
+.gallery {
+    grid-template-columns: 1fr;
+}
+.gallery-content  h3 {
+    margin-top: 2rem;
+}
+.features {
+    flex-direction: column;
+    margin-top: 64px;
+    text-align: center;
+    width: 100%;
+   object-fit: cover;
+}
+.feature-right img {
+   width: 232px;
+   object-fit: cover;
+}
+}
